--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "hardhat": "^2.16.1"
   },
   "dependencies": {
+    "@openzeppelin/contracts": "^4.9.2",
     "@openzeppelin/contracts-upgradeable": "^4.9.2"
   }
 }
