--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@nomicfoundation/hardhat-foundry": "^1.0.2",
     "@nomicfoundation/hardhat-toolbox": "^3.0.0",
     "@openzeppelin/hardhat-upgrades": "^2.0.1",
+    "ethers": "^6.1.0",
     "hardhat": "^2.16.1"
   },
   "dependencies": {
