--- a/.env.example
+++ b/.env.example
@@ -1,5 +1,16 @@
 MNEMONIC="test test test test"
 
-ETHERSCAN_API_KEY=__API_KEY__
+USE_HARDWARE_WALLET=false
+HARDWARE_WALLET_ACCOUNT=__ADDRESS__
+
+ETHERSCAN_OPTIMISM_API_KEY=__API_KEY__
+ETHERSCAN_ETHEREUM_API_KEY=__API_KEY__
+ETHERSCAN_FANTOM_API_KEY=__API_KEY__
+
 GOERLI_RPC_URL=https://eth-goerli.alchemyapi.io/v2/__API_KEY__
 PGN_TESTNET_RPC_URL=https://sepolia.publicgoods.network/
+
+PGN_RPC_URL=https://rpc.publicgoods.network
+OPTIMISM_RPC_URL=https://mainnet.optimism.io
+FANTOM_RPC_URL=https://rpc.ankr.com/fantom
+MAINNET_RPC_URL=https://eth-mainnet.g.alchemy.com/v2/__API_KEY__
