add avalanche scan api

--- a/.env.example
+++ b/.env.example
@@ -7,6 +7,7 @@ ETHERSCAN_OPTIMISM_API_KEY=__API_KEY__
 ETHERSCAN_ETHEREUM_API_KEY=__API_KEY__
 ETHERSCAN_FANTOM_API_KEY=__API_KEY__
 ETHERSCAN_POLYGON_API_KEY=__API_KEY__
+ETHERSCAN_AVALANCHE_API_KEY=__API_KEY__
 
 GOERLI_RPC_URL=https://eth-goerli.alchemyapi.io/v2/__API_KEY__
 PGN_TESTNET_RPC_URL=https://sepolia.publicgoods.network/
