--- a/.env.example
+++ b/.env.example
@@ -9,12 +9,12 @@ ETHERSCAN_FANTOM_API_KEY=__API_KEY__
 ETHERSCAN_POLYGON_API_KEY=__API_KEY__
 ETHERSCAN_AVALANCHE_API_KEY=__API_KEY__
 
-GOERLI_RPC_URL=https://eth-goerli.alchemyapi.io/v2/__API_KEY__
 PGN_TESTNET_RPC_URL=https://sepolia.publicgoods.network/
 ARBITRUM_TESTNET_RPC_URL=https://arbitrum-goerli.publicnode.com
 POLYGON_MUMBAI_RPC_URL=https://rpc-mumbai.maticvigil.com
 AVALANCHE_FUJI_RPC_URL=https://api.avax-test.network/ext/bc/C/rpc
 FANTOM_TESTNET_RPC_URL=https://rpc.testnet.fantom.network/
+SEPOLIA_RPC_URL=https://eth-sepolia.g.alchemy.com/v2/__API_KEY__
 
 PGN_RPC_URL=https://rpc.publicgoods.network
 OPTIMISM_RPC_URL=https://mainnet.optimism.io
