--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "deploy:zksync": "npx hardhat run scripts/deployZkSync.ts --config era.hardhat.config.ts --network"
   },
   "author": "",
   "license": "ISC",
@@ -14,11 +15,16 @@
     "@nomicfoundation/hardhat-toolbox": "^3.0.0",
     "@openzeppelin/hardhat-upgrades": "^2.0.1",
     "ethers": "^6.8.1",
-    "hardhat": "^2.16.1"
+    "hardhat": "^2.16.1",
+    "@matterlabs/hardhat-zksync-deploy": "^0.6.4",
+    "@matterlabs/hardhat-zksync-solc": "^0.4.1",
+    "@matterlabs/hardhat-zksync-upgradable": "^0.1.3",
+    "@matterlabs/hardhat-zksync-verify": "^0.2.0"
   },
   "dependencies": {
     "@openzeppelin/contracts": "^4.9.2",
     "@openzeppelin/contracts-upgradeable": "^4.9.2",
-    "dotenv": "^16.3.1"
+    "dotenv": "^16.3.1",
+    "zksync-web3": "^0.14.3"
   }
 }
