--- a/package.json
+++ b/package.json
@@ -9,12 +9,17 @@
   "author": "",
   "license": "ISC",
   "devDependencies": {
+    "@matterlabs/hardhat-zksync-deploy": "^1.0.0",
+    "@matterlabs/hardhat-zksync-solc": "^1.0.3",
+    "@matterlabs/hardhat-zksync-upgradable": "^1.0.0",
+    "@matterlabs/hardhat-zksync-verify": "^1.1.0",
     "@nomicfoundation/hardhat-foundry": "^1.0.2",
     "@nomicfoundation/hardhat-ledger": "^1.0.1",
     "@nomicfoundation/hardhat-toolbox": "^3.0.0",
     "@openzeppelin/hardhat-upgrades": "^2.0.1",
     "ethers": "^6.8.1",
-    "hardhat": "^2.16.1"
+    "hardhat": "^2.16.1",
+    "zksync-web3": "^0.16.0"
   },
   "dependencies": {
     "@openzeppelin/contracts": "^4.9.2",
