add zksync env vars

--- a/.env.example
+++ b/.env.example
@@ -17,6 +17,7 @@ FANTOM_TESTNET_RPC_URL=https://rpc.testnet.fantom.network/
 SEPOLIA_RPC_URL=https://eth-sepolia.g.alchemy.com/v2/__API_KEY__
 BASE_SEPOLIA_RPC_URL=https://sepolia.base.org
 BASE_GOERLI_RPC_URL=https://goerli.base.org
+ZKSYNC_ERA_GOERLI_RPC_URL=https://testnet.era.zksync.dev
 
 PGN_RPC_URL=https://rpc.publicgoods.network
 OPTIMISM_RPC_URL=https://mainnet.optimism.io
@@ -26,3 +27,4 @@ ARBITRUM_ONE_RPC_URL=https://arb1.arbitrum.io/rpc
 POLYGON_RPC_URL=https://polygon-rpc.com
 AVALANCHE_RPC_URL=https://api.avax.network/ext/bc/C/rpc
 BASE_RPC_URL=https://mainnet.base.org
+ZKSYNC_ERA_RPC_URL=https://mainnet.era.zksync.io
