--- a/.env.example
+++ b/.env.example
@@ -9,6 +9,7 @@ ETHERSCAN_ETHEREUM_API_KEY=__API_KEY__
 ETHERSCAN_FANTOM_API_KEY=__API_KEY__
 ETHERSCAN_POLYGON_API_KEY=__API_KEY__
 ETHERSCAN_AVALANCHE_API_KEY=__API_KEY__
+ETHERSCAN_SCROLL_API_KEY=__API_KEY__
 
 PGN_TESTNET_RPC_URL=https://sepolia.publicgoods.network/
 ARBITRUM_TESTNET_RPC_URL=https://arbitrum-goerli.publicnode.com
