--- a/.env.example
+++ b/.env.example
@@ -34,3 +34,12 @@ AVALANCHE_RPC_URL=https://api.avax.network/ext/bc/C/rpc
 BASE_RPC_URL=https://mainnet.base.org
 ZKSYNC_ERA_RPC_URL=https://mainnet.era.zksync.io
 SCROLL_RPC_URL=https://rpc.scroll.io
+
+SEI_DEVNET_RPC_URL=https://evm-rpc-arctic-1.sei-apis.com
+SEI_RPC_URL=
+CELO_RPC_URL=https://1rpc.io/celo
+CELO_ALFAJORES_RPC_URL=https://alfajores-forno.celo-testnet.org
+FILECOIN_RPC_URL=https://filecoin.drpc.org
+FILECOIN_TESTNET_RPC_URL=https://rpc.ankr.com/filecoin_testnet
+LUKSO_RPC_URL=https://rpc.mainnet.lukso.network
+LUKSO_TESTNET_RPC_URL=https://rpc.testnet.lukso.network
