deploy MRC to SEI mainet

--- a/.env.example
+++ b/.env.example
@@ -36,7 +36,7 @@ ZKSYNC_ERA_RPC_URL=https://mainnet.era.zksync.io
 SCROLL_RPC_URL=https://rpc.scroll.io
 
 SEI_DEVNET_RPC_URL=https://evm-rpc-arctic-1.sei-apis.com
-SEI_RPC_URL=
+SEI_RPC_URL=https://evm-rpc.sei-apis.com
 CELO_RPC_URL=https://1rpc.io/celo
 CELO_ALFAJORES_RPC_URL=https://alfajores-forno.celo-testnet.org
 FILECOIN_RPC_URL=https://filecoin.drpc.org
