--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "@nomicfoundation/hardhat-ledger": "^1.0.1",
     "@nomicfoundation/hardhat-toolbox": "^3.0.0",
     "@openzeppelin/hardhat-upgrades": "^2.0.1",
+    "@xyrusworx/hardhat-solidity-json": "^1.0.2",
     "ethers": "^6.8.1",
     "hardhat": "^2.16.1",
     "zksync-ethers": "^6.7.1"
