--- a/.env.example
+++ b/.env.example
@@ -43,3 +43,4 @@ FILECOIN_RPC_URL=https://filecoin.drpc.org
 FILECOIN_TESTNET_RPC_URL=https://rpc.ankr.com/filecoin_testnet
 LUKSO_RPC_URL=https://rpc.mainnet.lukso.network
 LUKSO_TESTNET_RPC_URL=https://rpc.testnet.lukso.network
+METIS_MAINNET_RPC_URL=https://andromeda.metis.io/?owner=1088
