deploy MRC to hedera

--- a/.env.example
+++ b/.env.example
@@ -13,6 +13,7 @@ ETHERSCAN_BASE_API_KEY=__API_KEY__
 ETHERSCAN_SCROLL_API_KEY=__API_KEY__
 ETHERSCAN_ARBITRUM_API_KEY=__API_KEY__
 GNOSISSCAN_API_KEY=__API_KEY__
+HEDERA_API_KEY=__API_KEY__
 
 PGN_TESTNET_RPC_URL=https://sepolia.publicgoods.network/
 ARBITRUM_TESTNET_RPC_URL=https://arbitrum-goerli.publicnode.com
@@ -46,3 +47,4 @@ LUKSO_RPC_URL=https://rpc.mainnet.lukso.network
 LUKSO_TESTNET_RPC_URL=https://rpc.testnet.lukso.network
 METIS_MAINNET_RPC_URL=https://andromeda.metis.io/?owner=1088
 GNOSIS_RPC_URL=https://rpc.gnosischain.com
+HEDERA_RPC_URL=https://mainnet.hashio.io/api
